@@ -526,6 +526,14 @@ void ChangeVideoMode(int NumLines,int NumColumns)
 	GenerateWINDOW_BUFFER_SIZE_EVENT(NumColumns,NumLines);
 }
 
+bool IsConsoleSizeChanged()
+{
+	COORD ConSize;
+	Console().GetSize(ConSize);
+	// GetSize returns virtual size, so this covers WindowMode=true too
+	return ConSize.Y != ScrY + 1 || ConSize.X != ScrX + 1;
+}
+
 void GenerateWINDOW_BUFFER_SIZE_EVENT(int Sx, int Sy)
 {
 	COORD Size={};
