@@ -1,3 +1,7 @@
+drkns 09.09.2016 23:40:13 +0200 - build 4785
+
+1. После 4778 криво работал WindowMode.
+
 drkns 08.09.2016 23:08:42 +0200 - build 4784
 
 1. Рефакторинг.
